--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 works-item startup">
+                <!-- <div class="col-lg-4 col-sm-6 works-item startup">
                   <div class="item-overlay">
                     <div class="category">Startup</div>
                     <img src="images/emailtool.png" alt="" />
@@ -488,7 +488,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-6 works-item web">
                   <div class="item-overlay">
                     <div class="category">Web</div>
