--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
               </li>
               <a href="#0" target="_blank" title="Instagram">
                 <i class="fab fa-instagram"></i>
-              </a></li> --> <li>
+              </a></li>
+              <li>
                 <a href="https://github.com/shakibnabi" target="_blank" title="Github">
                   <i class="fab fa-github"></i>
                 </a>
@@ -174,7 +175,7 @@
                     <p>
                       <a href="mailto:skbdevbd@gmail.com">skbdevbd@gmail.com</a>
                     </p>
-                    <a href="mailto:shakibnabi@foxdosbd.com">shakibnabi@foxdosbd.com</a></p> -->
+                    <a href="mailto:shakibnabi@foxdosbd.com">shakibnabi@foxdosbd.com</a></p>
                   </li>
                   <li>
                     <span>Mobile:</span>
