--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
                 <span>I'm a</span>
                 <span class="cd-words-wrapper">
                   <b class="is-visible">Developer</b>
-                  <b>Freelancer</b>
+                  <b>AI Engineer</b>
                   <b>Business Analyst</b>
-                  <b>Cloud Engineer</b>
+                  <b>SaaS Experet</b>
                   <b>IT Consultant</b>
-                  <b>Startup Adviser</b>
+                  <b>Startup/MVP</b>
                 </span>
               </h1>
-              <p class="description">I'm a Full-Stack Web Developer with extensive experience of over 10+ years. My expertise is to create and design Websites, Apps, Research, Electronic, Embedded, Civil, Mockups, and many more...</p>
+              <p class="description">I’m a Full-Stack Web & App Developer with 10+ years of experience driving digital transformation across diverse industries including eCommerce, Clothing & Fashion, Healthcare, Fintech, Hospitality, and Logistics. My expertise covers AI Engineering, IoT systems, eCommerce platforms, MVP development, and custom business solutions — delivering scalable, innovative, and out-of-the-box technology that accelerates growth. I specialize in building future-ready websites, apps, and enterprise platforms, combining strategy, design, and technology to help businesses thrive in the digital era.</p>
               <div class="button-area">
                 <a class="btn scroll" href="#portfolio">Portfolio</a>
-                <a class="btn scroll button-scheme" href="#quote">Hire me</a>
+                <a class="btn scroll button-scheme" href="mailto:skbdevbd@gmail.com">Hire me</a>
               </div>
             </div>
           </div>
@@ -159,11 +159,11 @@
               <div class="about-content">
                 <div class="section-heading">
                   <h2 class="section-title">About Me</h2>
-                  <h6 class="about-role">I am a Full-Stack Developer & IT Consultant</h6>
+                  <h6 class="about-role">I am a Full-Stack Developer | AI Engineer | Business Analyst</h6>
                 </div>
-                <p>I’m Shakib Mahmud Nabi. I completed my bachelor’s degree in Bachelor of Science in Computer Science and Engineering at Daffodil International University.</p>
-                <p>I'm a founder of a startup IT company name Foxdos Bangladesh. Also founding chairman of the board of trustees in Foxdos Foundation.</p>
-                <p>My future goal is to develop technology in my beloved country. I like to take on challenges, serious system environment problem solve, learn skills and etc. whatever I like.</p>
+                <p>My name is <strong>Shakib Mahmud Nabi</strong>. I hold a Bachelor of Science degree in Computer Science and Engineering from <strong>Daffodil International University</strong>.</p>
+                <p>I am the Founder and Vice President of <strong>Foxdos</strong>, an emerging IT company, and the Founding Chairman of the Board of Trustees at the <strong>Foxdos Foundation</strong>.</p>
+                <p>My long-term vision is to contribute to the advancement of technology in Bangladesh by addressing complex system challenges, fostering innovation, and developing sustainable solutions that create lasting impact.</p>  
                 <hr />
                 <ul class="list-inline about-info">
                   <li>
@@ -175,6 +175,7 @@
                     <p>
                       <a href="mailto:skbdevbd@gmail.com">skbdevbd@gmail.com</a>
                     </p>
+                    <p>
                     <a href="mailto:shakibnabi@foxdosbd.com">shakibnabi@foxdosbd.com</a></p>
                   </li>
                   <li>
@@ -199,7 +200,7 @@
               <div class="exp-content">
                 <h5 class="subtitle">Having 10 years Experience</h5>
                 <h3>Amazing <span>experience</span> with those companies and platforms </h3>
-                <p>I had a great experience with these companies and platforms for over 10 years. I create a lot of applications and design a platform. I also take a part Startup adviser who shares ideas to become a national-wide service company. I take the different companies as per as contract and project works base.</p>
+                <p>I have had a great experience with these companies and platforms for over 10 years. I create numerous applications and design platforms. I also take part Startup adviser who shares ideas to become a national-wide service company. I take the different companies as per a contract and project works base.</p>
                 <a href="#portfolio" class="btn scroll button-scheme">Portfolio</a>
               </div>
             </div>
@@ -732,7 +733,7 @@
                   </a>
                 </li>
               </ul>
-              <h6 class="copy-txt">Copyright © 2022 Shakib Mahmud Nabi</h6>
+              <h6 class="copy-txt">Copyright © 2025 Shakib Mahmud Nabi</h6>
             </div>
           </div>
         </div>
