Update title and Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Shakib M. Nabi - Resume</title>
+  <title>Shakib Nabi - Resume</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon" />
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <meta property="og:url" content="https://shakibnabi.github.io/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Shakib Mahmud Nabi Resume" />
+  <meta property="og:title" content="Shakib Nabi Resume" />
   <meta property="og:description"
     content="I'm a Full-Stack Web Developer with extensive experience of over 10+ years." />
   <meta property="og:image" content="https://shakibnabi.github.io/images/about.jpg" />
@@ -190,10 +190,7 @@
 
               <!-- CTA -->
               <div class="hero-actions">
-                <a href="#contact" class="btn btn-dark btn-lg mr-3">
-                  Start a Project
-                </a>
-                <a href="#work" class="btn btn-outline-dark btn-lg">
+                <a href="#portfolio" class="btn btn-outline-dark btn-lg">
                   View Portfolio
                 </a>
               </div>
